--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,14 @@
 {
-  "name": "martin3r-me/laravel-activity-log",
-  "require": {
-        "martin3r-me/laravel-ui-elements": "dev-main"
-    },
+  "name": "platform/activity-log",
   "autoload": {
     "psr-4": {
-      "Martin3r\\LaravelActivityLog\\": "src/"
+      "Platform\\ActivityLog\\": "src/"
     }
   },
   "extra": {
     "laravel": {
       "providers": [
-        "Martin3r\\LaravelActivityLog\\ActivityLogServiceProvider"
+        "Platform\\ActivityLog\\ActivityLogServiceProvider"
       ]
     }
   }
